--- a/docs/extensions/agent-settings.mdx
+++ b/docs/extensions/agent-settings.mdx
@@ -8,7 +8,7 @@ Sometimes you need to give users control over how your agent behaves during a co
 The Agent Stack platform provides a Settings extension that creates an interactive UI component where users can configure these options before or during their interaction with your agent.
 
 <Tip>
-Settings extensions are a type of [Platform Extension](/concepts/extensions) that allows you to easily "inject dependencies" into your agent. This follows the inversion of control principle where your agent defines what it needs, and the platform provides those dependencies.
+Settings extensions are a type of [Service Extension](/sdk/overview#dependency-injection-service-extensions) that allows you to easily "inject dependencies" into your agent. This follows the inversion of control principle where your agent defines what it needs, and the platform provides those dependencies.
 </Tip>
 
 ## Quickstart
