--- a/docs/extensions/rag.mdx
+++ b/docs/extensions/rag.mdx
@@ -342,6 +342,6 @@ async def rag_agent(
 ### Next steps
 To further improve the agent, learn how to use other parts of the platform such as LLMs,
 file uploads and conversations:
-- [LLM extension](./llm-configuration)
-- [Multi-turn conversations](./multi-turn)
-- [File handling](./file-handling)
+- [LLM extension](/extensions/llm-proxy-service)
+- [Multi-turn conversations](/guides/multi-turn)
+- [File handling](/guides/files)
