--- a/docs/how-to/deployment-guide.mdx
+++ b/docs/how-to/deployment-guide.mdx
@@ -112,7 +112,7 @@ auth:
 
 #### Admin authentication
 
-The admin password protects only administrative operations: deploying/deleting agents and modifying LLM provider connections. **All other functionality is accessible to anyone who can reach the application on your network without authentication**, including:
+The admin password protects only administrative operations: deploying/deleting agents and modifying LLM provider connections. All other functionality is accessible to anyone who can reach the application on your network without authentication, including:
 - **Using agents (consuming LLM API credits)**
 - Uploading files and creating vector stores
 - Managing sessions
